# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-05-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add the missing priority_default function to the
      Go/Haskell/Java/JavaScript/OCaml/Perl/PHP/Python/Python-C/Ruby
      CloudI APIs

2021-05-24 Michael Truog   <mjtruog at protonmail dot com>

    * Improve backward-cpp so Dl_info is defined for the macro
      BACKWARD_SYSTEM_LINUX
    * Improve M4 C++ backtrace detection
    * Fix M4 macros that become obsolete with GNU Autoconf 2.71

2021-05-23 Michael Truog   <mjtruog at protonmail dot com>

    * Small improvements to the ATS CloudI API
    * Use Erlang process high priority in cloudi_core_i_logger
      (and in no other processes)

2021-05-22 Michael Truog   <mjtruog at protonmail dot com>

    * Add more trans_id functions to the ATS CloudI API
    * Add sequence2/sequence3 to the messaging integration test in ATS
    * Switch the ATS count/messaging integration tests to use processes
      (exception handling in ATS2 is not thread-safe in version 0.4.0)

2021-05-21 Michael Truog   <mjtruog at protonmail dot com>

    * Improve ATS CloudI API trans_id type
    * Add the messaging integration test in ATS (sequence1)

2021-05-19 Michael Truog   <mjtruog at protonmail dot com>

    * Fix ATS CloudI API option type use
    * Add the info_key_value_new function to the ATS CloudI API
    * Add the msg_size integration test in ATS
    * Add the null integration test in ATS

2021-05-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add the info_key_value_parse function to the ATS CloudI API
    * Add the http_req integration test in ATS

2021-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add the ATS CloudI API function effects

2021-05-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the ATS CloudI API
        * All functions/types are present now
        * count integration test exists in ATS
    * Update cowboy, cowlib, ranch